--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,68 @@
+//plugins {
+//    alias(libs.plugins.android.application)
+//    alias(libs.plugins.google.gms.google.services)
+//}
+//
+//android {
+//    namespace 'com.example.bookapp'
+//    compileSdk 35
+//
+//    defaultConfig {
+//        applicationId "com.example.bookapp"
+//        minSdk 24
+//        targetSdk 35
+//        versionCode 1
+//        versionName "1.0"
+//
+//        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+//    }
+//
+//    buildTypes {
+//        release {
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+//        }
+//    }
+//    compileOptions {
+//        sourceCompatibility JavaVersion.VERSION_11
+//        targetCompatibility JavaVersion.VERSION_11
+//    }
+//
+//    buildFeatures{
+//        viewBinding true
+//    }
+//}
+//
+//dependencies {
+//
+//    implementation platform('com.google.firebase:firebase-bom:32.7.0')
+//    implementation 'com.google.firebase:firebase-auth'
+//    implementation 'com.google.firebase:firebase-database'
+//    implementation 'com.google.firebase:firebase-firestore'
+//    implementation libs.firebase.firestore
+//    implementation 'com.cloudinary:cloudinary-android:2.3.1'
+//
+//    implementation 'com.google.firebase:firebase-database-ktx:20.3.0' // Firebase Realtime Database
+//    implementation 'com.google.firebase:firebase-auth-ktx:22.3.0' // Firebase Authentication
+//    implementation 'com.google.firebase:firebase-storage-ktx:20.3.0'
+//    implementation 'org.jetbrains:annotations:24.0.1'
+//    implementation 'org.jetbrains:annotations:24.0.1'
+//
+////    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+////    implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
+//    implementation 'com.github.mhiew:android-pdf-viewer:3.2.0-beta.1'
+//
+//
+//    implementation libs.appcompat
+//    implementation libs.material
+//    implementation libs.activity
+//    implementation libs.constraintlayout
+//
+//    testImplementation libs.junit
+//    androidTestImplementation libs.ext.junit
+//    androidTestImplementation libs.espresso.core
+//}
+
 plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.google.gms.google.services)
@@ -28,25 +93,28 @@ android {
         targetCompatibility JavaVersion.VERSION_11
     }
 
-    buildFeatures{
+    buildFeatures {
         viewBinding true
     }
 }
 
 dependencies {
-
     implementation platform('com.google.firebase:firebase-bom:32.7.0')
-    implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-database-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
     implementation 'com.google.firebase:firebase-firestore'
-    implementation libs.firebase.firestore
-    implementation 'com.cloudinary:cloudinary-android:2.3.1'
+    implementation 'com.cloudinary:cloudinary-android:2.3.1' // Cập nhật nếu có phiên bản mới
 
+    //implementation 'com.github.barteksc:android-pdf-viewer:2.8.2' // Thử phiên bản ổn định
+    implementation 'com.github.mhiew:android-pdf-viewer:3.2.0-beta.1'
 
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+
+    implementation 'org.jetbrains:annotations:24.0.1' // Chỉ một lần
 
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
