--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     implementation 'com.github.mhiew:android-pdf-viewer:3.2.0-beta.1'
     implementation 'org.jetbrains:annotations:24.0.1'
 
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+
     // Android Jetpack libs
     implementation libs.appcompat
     implementation libs.material
