--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-alias(libs.plugins.android.application) apply false
+    alias(libs.plugins.android.application) apply false
     alias(libs.plugins.google.gms.google.services) apply false
 }
+
+// ❌ KHÔNG để pluginManagement ở đây nữa!
+// ✅ KHÔNG khai báo repositories ở đây vì đã có ở settings.gradle
