create payment method

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,24 +33,11 @@
         <activity
             android:name=".activities.PdfDetailActivity"
             android:exported="false" />
-<!--        <activity android:name=".activities.PdfDetailActivity"-->
-<!--            android:exported="true">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.VIEW" />-->
-<!--                <category android:name="android.intent.category.DEFAULT"/>-->
-<!--                <category android:name="android.intent.category.BROWSABLE"/>-->
-<!--                <data android:scheme="bookapp_group2_fu" android:host="paymentresult" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
+
 
         <activity
             android:name=".activities.PdfEditActivity"
             android:exported="false">
-
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".activities.PdfListAdminActivity"
@@ -81,7 +68,8 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="myappscheme" android:host="paymentresult" />
+                <data android:scheme="bookapp_group2_fu" android:host="paymentresult" />
+
             </intent-filter>
         </activity>
 
